# CMakeExample

./: CMakeLists.txt  README.md  cmake_vs2017.bat
AModel/: CMakeLists.txt  main.cpp
BModel/: CMakeLists.txt
BasedModel/: CMakeLists.txt
BuildingTest/ExecuteSample/: CMakeLists.txt
BuildingTest/SharedLibrarySample/: CMakeLists.txt  Demo.h  DemoHelper.cpp
CModel/: CMakeLists.txt
CTest/: CMakeLists.txt  README.md
CTest/SampleTest/: CMakeLists.txt  main.cpp
InstallTest/: README.md
OtherTest/PermissionTest/: CMakeLists.txt
OtherTest/PermissionTest/CModel/: CMakeLists.txt
OtherTest/PermissionTest/PrivateModel/: CMakeLists.txt
OtherTest/PermissionTest/PublicModel/: CMakeLists.txt
PackageTest/: README.md
PermissionTest/AModel/: CMakeLists.txt
PermissionTest/BModel/: CMakeLists.txt
PermissionTest/BasedModel/: CMakeLists.txt
PermissionTest/CModel/: CMakeLists.txt
PermissionTest/InterfaceModel/: CMakeLists.txt
PermissionTest/PrivateModel/: CMakeLists.txt
PermissionTest/PublicModel/: CMakeLists.txt
PrivateModel/: CMakeLists.txt
PublicModel/: CMakeLists.txt
Tools/CMake/: CMakeExampleVersion.h.in  Config.cmake.in  SharedLibraryExport.h.in  general.cmake
doc/: Install.md  Package.md  todo.md
include/SharedLibrarySample/: DemoHelper.h  SharedLibrarySample_export.h
interface/SharedLibrarySample/: IDemo.h
